--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,7 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-lib_deps = fastled/FastLED@^3.5.0
+monitor_speed = 115200
+lib_deps = 
+	fastled/FastLED@^3.5.0
+	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
